# Game-Mcp

./: .gitignore  Dockerfile  N8N_SETUP.md  README.md  claude_desktop_config.json  docker-compose.yml  mcp_device_server.py  mcp_job_server.py  mining.env  n8n_agent_connector.py  pyproject.toml  redis_state.py  requirements.txt  server.py  shared_state.py  simulate_iot_device.py  start_mining.sh  stratum_proxy.py  test_mcp.sh  test_mcp_mcpclient.py
docs/: UNITY_CLIENT_COMPAT.md
