[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-mining-mcp"
version = "1.0.0"
description = "MCP Server for GameMining IoT orchestration"
authors = [{name = "GameMining Team"}]
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "asyncio",
    "websockets>=12.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlite3"
]

[project.scripts]
game-mining-mcp = "game_mining_mcp.server:main"
